objects/CSSRVMYFS_Request_Types__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Product_Type_Code__c</fullName>
        <label>Product_Type_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type_Code__c</fullName>
        <label>Request_Type_Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Request_Type_Value__c</fullName>
        <label>Request_Type_Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CSSRVMYFS_Request_Types</label>
</CustomObject>